--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,10 @@
-HUBS_SERVER="hubs.mozilla.com"
+HUBS_SERVER="hubs.xpportal.io"
 RETICULUM_SERVER="hubs.mozilla.com"
 FARSPARK_SERVER="farspark.reticulum.io"
-CORS_PROXY="hubs-proxy.com"
+CORS_PROXY="xpportal-hub-cors-proxy.brokenplace.com"
 NON_CORS_PROXY_DOMAINS="hubs.mozilla.com,reticulum.io"
 ROUTER_BASE_PATH="/spoke"
-GITHUB_ORG="mozilla"
+GITHUB_ORG="brokenplace"
 GITHUB_REPO="spoke"
 GITHUB_PUBLIC_TOKEN="de8cbfb4cc0281c7b731c891df431016c29b0ace"
 IS_MOZ="false"
