--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"run-local-reticulum": "cross-env NODE_TLS_REJECT_UNAUTHORIZED=0 ROUTER_BASE_PATH=/spoke BASE_ASSETS_PATH=https://hubs.local:9090/ HUBS_SERVER=hubs.local:4000 RETICULUM_SERVER=hubs.local:4000 yarn start",
 		"build": "cross-env NODE_ENV=production webpack --mode production",
 		"bundle-analyzer": "cross-env NODE_ENV=production webpack-dev-server --mode=production --env.BUNDLE_ANALYZER",
+		"precommit": "lint-staged",
 		"lint": "yarn lint:js && yarn lint:css",
 		"lint:js": "eslint ./src",
 		"lint:css": "stylelint ./src/**/*.js",
@@ -148,8 +149,11 @@
 		"husky": "^3.0.5",
 		"jsdom": "^15.1.1",
 		"lint-staged": "^9.2.5",
+		"node-fetch": "^2.6.0",
+		"ora": "^4.0.2",
 		"prettier": "^1.16.4",
 		"puppeteer": "^5.2.1",
+		"rimraf": "^2.6.2",
 		"selfsigned": "^1.10.6",
 		"sinon": "^7.4.2",
 		"standardized-audio-context-mock": "^7.1.6",
@@ -158,6 +162,7 @@
 		"stylelint-config-styled-components": "^0.1.1",
 		"stylelint-processor-styled-components": "^1.8.0",
 		"tap-xunit": "^2.4.1",
+		"tar": "^5.0.5",
 		"terser-webpack-plugin": "^2.0.1",
 		"webpack": "^4.39.3",
 		"webpack-bundle-analyzer": "^3.4.1",
