init omi emitter component

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,7 @@
 HUBS_SERVER="hubs.xpportal.io"
 RETICULUM_SERVER="hubs.mozilla.com"
 FARSPARK_SERVER="farspark.reticulum.io"
-CORS_PROXY="xpportal-hub-cors-proxy.brokenplace.com"
+CORS_PROXY="build-xpportal-io-cors-proxy.build-xpportal-io.xpxr.rest"
 NON_CORS_PROXY_DOMAINS="hubs.mozilla.com,reticulum.io"
 ROUTER_BASE_PATH="/spoke"
 GITHUB_ORG="brokenplace"
